--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HiWEJR9CeE84r9puWyVT9hjb6WuazFcv",
-      "authorship_tag": "ABX9TyPVuYiQjt14L7uZvlYcMdL1",
+      "authorship_tag": "ABX9TyNS9hd6HDRlVjsBylxuMnV7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,10 +44,10 @@
         "# Purpose:\n",
         "# I made this program to (1) see what I could do and (2) collect\n",
         "# things that I liked about space, prehistoric creatures,\n",
-        "# and, most importantly, geese. Gotta have the geese, man.\n",
+        "# and, most importantly, geese. Gotta have the geese.\n",
         "\n",
         "# Credits:\n",
-        "# If you don't plan on being so daring, give credit to looney tunes, or\n",
+        "# If you don't plan on being so daring, give credit to looney tunes or\n",
         "# the entity that owns looney tunes.\n"
       ],
       "metadata": {
@@ -59,8 +59,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# MODULES, OTHER FILES, & CONSTANTS\n",
-        "# ---------------------------------\n",
+        "# MODULES, OTHER FILES, CONSTANTS, & FUNCTIONS\n",
+        "# --------------------------------------------\n",
         "\n",
         "import time\n",
         "import sys\n",
@@ -75,22 +75,22 @@
         "# thatsallfolks1(.3)\n",
         "# thatsallfolks2(.2)\n",
         "\n",
-        "G = 6.67408e-11\n"
+        "G = 6.67408e-11\n",
+        "\n",
+        "def v_esc(M,R):\n",
+        "  return (2*G*M/R)**(1/2)\n"
       ],
       "metadata": {
         "id": "QqEjaaeqoeur"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# FUNCTIONS & COPY-PASTE\n",
-        "# ----------------------\n",
-        "\n",
-        "def v_esc(M,R):\n",
-        "  return (2*G*M/R)**(1/2)\n",
+        "# SCRATCH\n",
+        "# -------\n",
         "\n",
         "# print(\"Do you wish to continue? Enter:\\n\" +\n",
         "#       \"> 'c' to continue\\n\" +\n",
