--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HiWEJR9CeE84r9puWyVT9hjb6WuazFcv",
-      "authorship_tag": "ABX9TyNS9hd6HDRlVjsBylxuMnV7",
+      "authorship_tag": "ABX9TyPt2C2xIDUnvJpZspddjWYk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,8 +30,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# DOCUMENTATION\n",
-        "# -------------\n",
+        "# DOCUMENTATION:\n",
         "\n",
         "# Author: Kaila Kennedy\n",
         "\n",
@@ -59,9 +58,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# MODULES, OTHER FILES, CONSTANTS, & FUNCTIONS\n",
-        "# --------------------------------------------\n",
-        "\n",
+        "# MODULES:\n",
         "import time\n",
         "import sys\n",
         "import random\n",
@@ -69,22 +66,96 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
+        "# CONSTANTS:\n",
+        "G = 6.67408e-11\n",
+        "\n",
+        "# FUNCTIONS:\n",
+        "\n",
         "%run ./pypics.ipynb\n",
         "# sillygoose()\n",
         "# gottoosilly()\n",
         "# thatsallfolks1(.3)\n",
         "# thatsallfolks2(.2)\n",
         "\n",
-        "G = 6.67408e-11\n",
-        "\n",
         "def v_esc(M,R):\n",
-        "  return (2*G*M/R)**(1/2)\n"
+        "  return (2*G*M/R)**(1/2)\n",
+        "\n",
+        "def end_things():\n",
+        "  print()\n",
+        "  for i in range(3):\n",
+        "    print(\".\", end=\"\", flush=True)\n",
+        "    time.sleep(1)\n",
+        "  print()\n"
       ],
       "metadata": {
         "id": "QqEjaaeqoeur"
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "jd9zpAhKTWyb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# THING 1\n",
+        "# -------\n",
+        "\n",
+        "print(\"THE CALLISTOCRAFT\")\n",
+        "print(\"-----------------\")\n",
+        "time.sleep(1)\n",
+        "print(\"How fast does a rocket on Callisto have to go to escape the Galilean\\n\" +\n",
+        "      \"satellite's gravity? (Enter Callisto's characteristics.)\\n\")\n",
+        "time.sleep(1)\n",
+        "\n",
+        "print(\"What is Callisto's mass in kg?\")\n",
+        "callisto_mass = input()\n",
+        "callisto_mass = float(callisto_mass)\n",
+        "time.sleep(1)\n",
+        "\n",
+        "print(\"What is Callisto's radius in meters?\")\n",
+        "callisto_radius = input()\n",
+        "callisto_radius = float(callisto_radius)\n",
+        "\n",
+        "callisto_v_esc = v_esc(callisto_mass,callisto_radius)\n",
+        "\n",
+        "while callisto_v_esc not in range():\n",
+        "# give range of appropriate responses and give silly goose when it isn't in range (use 1 sigfig)\n",
+        "\n",
+        "end_things()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UlZMjvhHJHEr",
+        "outputId": "4d785a63-299b-4371-c94c-6a8bf0352ad5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "THE CALLISTOCRAFT\n",
+            "-----------------\n",
+            "How fast does a rocket on Callisto have to go to escape the Galilean\n",
+            "satellite's gravity? Enter Callisto's characteristics to find out.\n",
+            "\n",
+            "What is Callisto's mass in kg?\n",
+            "8\n",
+            "What is Callisto's radius in meters?\n",
+            "9\n",
+            "\n",
+            "...\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -129,75 +200,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "jd9zpAhKTWyb"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# THING 1\n",
-        "# -------\n",
-        "\n",
-        "print(\"THE CALLISTOCRAFT\")\n",
-        "print(\"-----------------\")\n",
-        "time.sleep(1)\n",
-        "print(\"How fast does a rocket on Callisto have to go to escape the Galilean\\n\" +\n",
-        "      \"satellite's gravity? Enter Callisto's characteristics to find out.\\n\")\n",
-        "time.sleep(1)\n",
-        "\n",
-        "print(\"What is Callisto's mass in kg?\")\n",
-        "callisto_mass = input()\n",
-        "callisto_mass = float(callisto_mass)\n",
-        "time.sleep(1)\n",
-        "\n",
-        "print(\"What is Callisto's radius in meters?\")\n",
-        "callisto_radius = input()\n",
-        "callisto_radius = float(callisto_radius)\n",
-        "\n",
-        "callisto_v_esc = v_esc(callisto_mass,callisto_radius)\n",
-        "\n",
-        "# give range of appropriate responses and give silly goose when it isn't in range (use 1 sigfig)\n",
-        "\n",
-        "print()\n",
-        "\n",
-        "for i in range(3):\n",
-        "  print(\".\", end=\"\", flush=True)\n",
-        "  time.sleep(1)\n",
-        "\n",
-        "print()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UlZMjvhHJHEr",
-        "outputId": "4d785a63-299b-4371-c94c-6a8bf0352ad5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "THE CALLISTOCRAFT\n",
-            "-----------------\n",
-            "How fast does a rocket on Callisto have to go to escape the Galilean\n",
-            "satellite's gravity? Enter Callisto's characteristics to find out.\n",
-            "\n",
-            "What is Callisto's mass in kg?\n",
-            "8\n",
-            "What is Callisto's radius in meters?\n",
-            "9\n",
-            "\n",
-            "...\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
