--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HiWEJR9CeE84r9puWyVT9hjb6WuazFcv",
-      "authorship_tag": "ABX9TyPt2C2xIDUnvJpZspddjWYk",
+      "authorship_tag": "ABX9TyPHyac/tgkQS5RALzbIkS9C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,27 +30,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# DOCUMENTATION:\n",
+        "'''\n",
+        "DOCUMENTATION:\n",
         "\n",
-        "# Author: Kaila Kennedy\n",
+        "  Author: Kaila Kennedy\n",
+        "  Date Started: 06/23/2025\n",
+        "  Date Finished: -\n",
         "\n",
-        "# Date Started:\n",
-        "# 06/23/2025\n",
+        "  I made this interactive program:\n",
+        "  >> to see what I could do.\n",
+        "  >> to collect things that I like about space, creatures, books?, and,\n",
+        "     most importantly, geese.\n",
         "\n",
-        "# Date Finished:\n",
-        "# --/--/----\n",
+        "  Credits:\n",
+        "  >> If you don't plan on being so daring, give credit to looney tunes or the\n",
+        "     entity that owns looney tunes.\n",
         "\n",
-        "# Purpose:\n",
-        "# I made this program to (1) see what I could do and (2) collect\n",
-        "# things that I liked about space, prehistoric creatures,\n",
-        "# and, most importantly, geese. Gotta have the geese.\n",
-        "\n",
-        "# Credits:\n",
-        "# If you don't plan on being so daring, give credit to looney tunes or\n",
-        "# the entity that owns looney tunes.\n"
+        "'''"
       ],
       "metadata": {
-        "id": "BnwCTx12xjDV"
+        "id": "BnwCTx12xjDV",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": []
@@ -62,6 +62,7 @@
         "import time\n",
         "import sys\n",
         "import random\n",
+        "import itertools as it\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
@@ -69,16 +70,16 @@
         "# CONSTANTS:\n",
         "G = 6.67408e-11\n",
         "\n",
-        "# FUNCTIONS:\n",
+        "# GENERAL FUNCTIONS:\n",
         "\n",
-        "%run ./pypics.ipynb\n",
+        "# %run ./pypics.ipynb\n",
         "# sillygoose()\n",
         "# gottoosilly()\n",
         "# thatsallfolks1(.3)\n",
         "# thatsallfolks2(.2)\n",
         "\n",
         "def v_esc(M,R):\n",
-        "  return (2*G*M/R)**(1/2)\n",
+        "  return ((2*G*M)/R)**(1/2)\n",
         "\n",
         "def end_things():\n",
         "  print()\n",
@@ -90,7 +91,7 @@
       "metadata": {
         "id": "QqEjaaeqoeur"
       },
-      "execution_count": 2,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -104,28 +105,83 @@
       "cell_type": "code",
       "source": [
         "# THING 1\n",
-        "# -------\n",
         "\n",
         "print(\"THE CALLISTOCRAFT\")\n",
-        "print(\"-----------------\")\n",
-        "time.sleep(1)\n",
-        "print(\"How fast does a rocket on Callisto have to go to escape the Galilean\\n\" +\n",
-        "      \"satellite's gravity? (Enter Callisto's characteristics.)\\n\")\n",
-        "time.sleep(1)\n",
+        "print(\"----------------- \\n\")\n",
+        "time.sleep(1.5)\n",
         "\n",
-        "print(\"What is Callisto's mass in kg?\")\n",
-        "callisto_mass = input()\n",
-        "callisto_mass = float(callisto_mass)\n",
-        "time.sleep(1)\n",
+        "print(\"How fast does a rocket on Callisto's surface have to go to escape the \\n\" +\n",
+        "      \"Galilean satellite's gravity? \\n\")\n",
+        "time.sleep(2)\n",
         "\n",
-        "print(\"What is Callisto's radius in meters?\")\n",
-        "callisto_radius = input()\n",
-        "callisto_radius = float(callisto_radius)\n",
+        "print(\"These may help: \\n\" +\n",
+        "      \"- The gravitational constant is 6.6743 × 10e-11 in mks units \\n\" +\n",
+        "      \"- https://nssdc.gsfc.nasa.gov/planetary/factsheet/galileanfact_table.html \\n\")\n",
+        "time.sleep(2)\n",
         "\n",
-        "callisto_v_esc = v_esc(callisto_mass,callisto_radius)\n",
+        "def callisto_questions_and_calculations():\n",
         "\n",
-        "while callisto_v_esc not in range():\n",
-        "# give range of appropriate responses and give silly goose when it isn't in range (use 1 sigfig)\n",
+        "  print(\"What is Callisto's mass in kg? Enter m, where mass = m × 10e21 kg.\")\n",
+        "  time.sleep(1)\n",
+        "  callisto_mass_kg_coeff = input()\n",
+        "  callisto_mass_kg_coeff = float(callisto_mass_kg_coeff)\n",
+        "  callisto_mass_kg = callisto_mass_kg_coeff * (10**21)\n",
+        "  # while mass [not an integer or float]\n",
+        "  # silly goose\n",
+        "  # got too silly\n",
+        "  time.sleep(1)\n",
+        "  print()\n",
+        "\n",
+        "  print(\"What is Callisto's radius in kilometers?\")\n",
+        "  callisto_radius_km = input()\n",
+        "  callisto_radius_km = float(callisto_radius_km)\n",
+        "  callisto_radius_m = callisto_radius_km * 1000\n",
+        "  # while radius [not an integer or float]\n",
+        "  # silly goose\n",
+        "  # gottoosilly()\n",
+        "  time.sleep(1)\n",
+        "  print()\n",
+        "\n",
+        "  v_esc_in_mps = v_esc(callisto_mass_kg,callisto_radius_m)\n",
+        "  v_esc_in_mps = round(v_esc_in_mps, 4)\n",
+        "\n",
+        "  v_esc_in_kmps = v_esc_in_mps / 1000\n",
+        "\n",
+        "  return v_esc_in_kmps\n",
+        "\n",
+        "answer1 = callisto_questions_and_calculations()\n",
+        "answer1 = round(answer1, 4)\n",
+        "\n",
+        "if (answer1 < 2.435) or (answer1 > 2.445):\n",
+        "\n",
+        "  print(f\"Your answer is: {answer1} km/s. That doesn't seem right.\\n\" +\n",
+        "         \"Would you like to try again? Enter 'yes' or 'no'.\")\n",
+        "  determination1 = input()\n",
+        "  determination1 = str(determination1)\n",
+        "  time.sleep(1)\n",
+        "  print()\n",
+        "\n",
+        "  while (determination1 != \"yes\" and determination1 != \"no\"):\n",
+        "    %run ./pypics.ipynb\n",
+        "    sillygoose()\n",
+        "    print(\"\\nWould you like to try again? Enter 'yes' or 'no'.\")\n",
+        "    determination1 = input()\n",
+        "    determination1 = str(determination1)\n",
+        "    time.sleep(1)\n",
+        "    print()\n",
+        "\n",
+        "  if determination1 == \"yes\":\n",
+        "    callisto_questions_and_calculations()\n",
+        "\n",
+        "  elif determination1 == \"no\":\n",
+        "    print(\"Okay. \\n\")\n",
+        "    pass\n",
+        "\n",
+        "if 2.435 <= answer1 <= 2.445:\n",
+        "  print(f\"Your answer is: {answer1} km/s. That seems about right.\")\n",
+        "  time.sleep(1)\n",
+        "  print(\"You can read on Callisto here, if you'd like: https://science.nasa.gov/jupiter/jupiter-moons/callisto/\")\n",
+        "  time.sleep(1)\n",
         "\n",
         "end_things()"
       ],
@@ -134,23 +190,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UlZMjvhHJHEr",
-        "outputId": "4d785a63-299b-4371-c94c-6a8bf0352ad5"
+        "outputId": "72c48270-527d-4dbf-f00a-49f0a272a2bf"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "THE CALLISTOCRAFT\n",
-            "-----------------\n",
-            "How fast does a rocket on Callisto have to go to escape the Galilean\n",
-            "satellite's gravity? Enter Callisto's characteristics to find out.\n",
+            "----------------- \n",
             "\n",
-            "What is Callisto's mass in kg?\n",
-            "8\n",
-            "What is Callisto's radius in meters?\n",
-            "9\n",
+            "How fast does a rocket on Callisto's surface have to go to escape the \n",
+            "Galilean satellite's gravity? \n",
+            "\n",
+            "These may help: \n",
+            "- The gravitational constant is 6.6743 × 10e-11 in mks units \n",
+            "- https://nssdc.gsfc.nasa.gov/planetary/factsheet/galileanfact_table.html \n",
+            "\n",
+            "What is Callisto's mass in kg? Enter m, where mass = m × 10e21 kg.\n",
+            "107.6\n",
+            "\n",
+            "What is Callisto's radius in kilometers?\n",
+            "2410.5\n",
+            "\n",
+            "Your answer is: 2.441 km/s. That seems about right.\n",
+            "You can read on Callisto here, if you'd like: https://science.nasa.gov/jupiter/jupiter-moons/callisto/\n",
             "\n",
             "...\n"
           ]
@@ -193,13 +258,67 @@
         "# elif wish_# == \"e\":\n",
         "#   sys.exit(\"Bye, bye, Birdy!\")\n",
         "#\n",
-        "# print()"
+        "# print()\n",
+        "\n",
+        "import itertools as it\n",
+        "for i in it.chain(range(30, 52), range(1, 18)):\n",
+        "    print(i)"
       ],
       "metadata": {
-        "id": "yxsYY9c1omJS"
+        "id": "yxsYY9c1omJS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a37da9fc-f6a3-40eb-fef6-3e9b4e6c5171"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n",
+            "31\n",
+            "32\n",
+            "33\n",
+            "34\n",
+            "35\n",
+            "36\n",
+            "37\n",
+            "38\n",
+            "39\n",
+            "40\n",
+            "41\n",
+            "42\n",
+            "43\n",
+            "44\n",
+            "45\n",
+            "46\n",
+            "47\n",
+            "48\n",
+            "49\n",
+            "50\n",
+            "51\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
