--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HiWEJR9CeE84r9puWyVT9hjb6WuazFcv",
-      "authorship_tag": "ABX9TyPHyac/tgkQS5RALzbIkS9C",
+      "authorship_tag": "ABX9TyNNJXkB4TNYCGYHvFg2brJ6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "QqEjaaeqoeur"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
         "id": "UlZMjvhHJHEr",
         "outputId": "49273eff-3a4f-4d31-89ff-e1d0d2643788"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,6 +221,140 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# THING what\n",
+        "\n",
+        "'''\n",
+        "Black Hole Bending: Why does light bend around black holes?\n",
+        "\n",
+        "Light bends around black holes possibly due to the extreme warping of spacetime\n",
+        "caused by their immense gravity. This phenomenon, known as gravitational\n",
+        "lensing, occurs because light, while traveling in a straight line according\n",
+        "to its own frame of reference, follows the curves and distortions of spacetime\n",
+        "created by the black hole's mass.\n",
+        "\n",
+        "Check out this other example of gravitational lensing, that is sometimes called\n",
+        "the \"Einstein Cross\":\n",
+        "https://science.nasa.gov/asset/hubble/the-gravitational-lens-g2237-0305/\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "IH6kkhHqmg2u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# THING what\n",
+        "\n",
+        "'''\n",
+        "Add something about pulsar spins! Get python data from the internet on one of\n",
+        "these things and make it into a graph!!!:\n",
+        ">>Dark Matter Detection: Precise pulsar timing data can be used to search for\n",
+        "  the 'noise' introduced by dark matter objects, potentially leading to a better\n",
+        "  understanding of dark matter distribution.\n",
+        ">>Gravitational Waves: By precisely measuring the timing of pulsar signals,\n",
+        "  scientists can detect the subtle distortions caused by passing gravitational\n",
+        "  waves, potentially revealing low-frequency gravitational radiation from\n",
+        "  merging supermassive black holes.\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "X3yVjli4czTv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# THING what\n",
+        "\n",
+        "'''\n",
+        "Mosasaur Multiple-choice (tell them what a mosasaur is) or Megalodon\n",
+        "Multiple-choice [random number generator and then if statement to do\n",
+        "mosasaur or megalodon]\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "kRCAX-uqmkXc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# THING what\n",
+        "\n",
+        "'''\n",
+        "Calculator: This calculator calculates things so you don't have to. Pick\n",
+        "from one of these [and loop however many times so they can pick again until\n",
+        "all things are calculated; also have a way they can pass]. And calculate things\n",
+        "that are difficult/tedious to calculate; maybe it'll be useful, and maybe this is\n",
+        "the wrong program for a calculator. Make a big calculator notebook after this\n",
+        "notebook.\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "r4G-5kaoouil"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# THING what\n",
+        "\n",
+        "'''\n",
+        "A Quasar Question:\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "Y4E_iwxdovVT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# THING what\n",
+        "\n",
+        "'''\n",
+        "Dino Nuggets: (fun facts about dinosaurs; enter 'keyword' to learn more loop,\n",
+        "or say no to break while loop with if statements)\n",
+        ">>\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "YMCKzpsiovf2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# THING what\n",
+        "\n",
+        "'''\n",
+        "Now onto something boring and really hard... [insert impossible physics\n",
+        "question]; \"If you don't want to answer this question, enter 'no'.\" ; and\n",
+        "for every answer, say 'thanks for the idea' and maybe save it to a list file.\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "m6BfkrzTPT_a"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -258,11 +392,7 @@
         "# elif wish_# == \"e\":\n",
         "#   sys.exit(\"Bye, bye, Birdy!\")\n",
         "#\n",
-        "# print()\n",
-        "\n",
-        "import itertools as it\n",
-        "for i in it.chain(range(30, 52), range(1, 18)):\n",
-        "    print(i)"
+        "# print()"
       ],
       "metadata": {
         "id": "yxsYY9c1omJS",
@@ -271,7 +401,7 @@
         },
         "outputId": "a37da9fc-f6a3-40eb-fef6-3e9b4e6c5171"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,98 +449,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "X3yVjli4czTv"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# thing format:\n",
-        "# -------------\n",
-        "# line 1 of title\n",
-        "# sleep\n",
-        "# line 2 of title\n",
-        "# sleep\n",
-        "# line 3 of title\n",
-        "# sleep\n",
-        "# ---------------\n",
-        "# sleep\n",
-        "# say thing or ask question\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "# ------------------------------------------------------------------------------------\n",
-        "# Remember to use terminate() before if statements and sillygoose() for wrong answers!\n",
-        "# use f-strings somewhere\n",
-        "#\n",
-        "# thing format:\n",
-        "# -------------\n",
-        "# line 1 of title\n",
-        "# sleep\n",
-        "# line 2 of title\n",
-        "# sleep\n",
-        "# line 3 of title\n",
-        "# sleep\n",
-        "# ---------------\n",
-        "# sleep\n",
-        "# say thing or ask question\n",
-        "#\n",
-        "# THE THINGS; NOT IN THIS ORDER(?); Put explanations for things if needed!\n",
-        "# ------------------------------------------------------------------------\n",
-        "\n",
-        "# Black Hole Bending: Why does light bend around black holes?\n",
-        "#\n",
-        "# Mosasaur Multiple-choice (tell them what a mosasaur is) or Megalodon\n",
-        "# Multiple-choice [random number generator and then if statement]\n",
-        "#\n",
-        "# Calculator: This calculator calculates things so you don't have to! Pick\n",
-        "# from one of these [and loop however many times so they can pick again until\n",
-        "# all things are calculated; also have a way they can pass]\n",
-        "  # name things to calculate...from modern? from astrophysics? look through files.\n",
-        "#\n",
-        "# A Quasar Question\n",
-        "#\n",
-        "# Dino Nuggets: (fun facts about dinosaurs; enter 'keyword' to learn more loop,\n",
-        "# or say no to break while loop with if statements) (one is dinosaurs are\n",
-        "# technically prehistoric land-dwelling reptiles, so the mosasaurus was not a\n",
-        "# dino. Enter 'dinodef' to learn something else; and maybe what is the word dino\n",
-        "# derived from)\n",
-        "#\n",
-        "# put in an astronomical phenomena graph with something special like seaborn\n",
-        "# and then explain it (maybe spectra from a small planet eclipsing its star;\n",
-        "# something that hasn't already been covered); learn from HW keys\n",
-        "#\n",
-        "# Pulsar Blues: A lot of pulsars are a bluish-white color. Why?\n",
-        "#\n",
-        "# Now onto something boring and really hard... [insert impossible/unanswered\n",
-        "# physics question]; If you don't want to answer this question, enter 'no'. ;\n",
-        "# for every answer, give this feedback: I don't know the answer to this question. Thanks for the idea! :}\n",
-        "\n",
-        "# Thing 1\n",
-        "# Thing 2\n",
-        "# Thing 3\n",
-        "# Thing 4\n",
-        "# Thing 5\n",
-        "# Thing 6\n",
-        "# Thing 7\n",
-        "# Thing 8\n",
-        "# Thing 9"
-      ],
-      "metadata": {
-        "id": "m6BfkrzTPT_a"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
