--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HiWEJR9CeE84r9puWyVT9hjb6WuazFcv",
-      "authorship_tag": "ABX9TyNNJXkB4TNYCGYHvFg2brJ6",
+      "authorship_tag": "ABX9TyM/AWvHiCR1yevKr1ds9qK2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,8 +253,9 @@
         "# THING what\n",
         "\n",
         "'''\n",
-        "Add something about pulsar spins! Get python data from the internet on one of\n",
-        "these things and make it into a graph!!!:\n",
+        "Add something about pulsar spins! Get a data array from the internet (formatted\n",
+        "correctly for python purposes; also, review arrays) on one of these things and\n",
+        "make it into a graph!!!:\n",
         ">>Dark Matter Detection: Precise pulsar timing data can be used to search for\n",
         "  the 'noise' introduced by dark matter objects, potentially leading to a better\n",
         "  understanding of dark matter distribution.\n",
@@ -296,9 +297,11 @@
         "Calculator: This calculator calculates things so you don't have to. Pick\n",
         "from one of these [and loop however many times so they can pick again until\n",
         "all things are calculated; also have a way they can pass]. And calculate things\n",
-        "that are difficult/tedious to calculate; maybe it'll be useful, and maybe this is\n",
-        "the wrong program for a calculator. Make a big calculator notebook after this\n",
+        "that are difficult/tedious to calculate; maybe it'll be useful, and maybe this\n",
+        "is the wrong program for a calculator. Make a big calculator notebook after this\n",
         "notebook.\n",
+        ">>matrices maybe\n",
+        ">>\n",
         "'''"
       ],
       "metadata": {
@@ -328,7 +331,7 @@
         "# THING what\n",
         "\n",
         "'''\n",
-        "Dino Nuggets: (fun facts about dinosaurs; enter 'keyword' to learn more loop,\n",
+        "Dino Nuggets: (fun facts about dinosaurs; \"enter 'keyword' to learn more\" loop,\n",
         "or say no to break while loop with if statements)\n",
         ">>\n",
         "'''"
