--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HiWEJR9CeE84r9puWyVT9hjb6WuazFcv",
-      "authorship_tag": "ABX9TyM/AWvHiCR1yevKr1ds9qK2",
+      "authorship_tag": "ABX9TyPfETGFbJoGPXjoaB5x5wVe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "\n",
         "  I made this interactive program:\n",
         "  >> to see what I could do.\n",
-        "  >> to collect things that I like about space, creatures, books?, and,\n",
+        "  >> to collect things that I like about space, prehistoric creatures, and,\n",
         "     most importantly, geese.\n",
         "\n",
         "  Credits:\n",
