--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HiWEJR9CeE84r9puWyVT9hjb6WuazFcv",
-      "authorship_tag": "ABX9TyPfETGFbJoGPXjoaB5x5wVe",
+      "authorship_tag": "ABX9TyPfJOYUiPvEZAx0+ZRcqOhG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,7 @@
         "  >> to see what I could do.\n",
         "  >> to collect things that I like about space, prehistoric creatures, and,\n",
         "     most importantly, geese.\n",
+        "  >> for fun?\n",
         "\n",
         "  Credits:\n",
         "  >> If you don't plan on being so daring, give credit to looney tunes or the\n",
@@ -177,7 +178,7 @@
         "    print(\"Okay. \\n\")\n",
         "    pass\n",
         "\n",
-        "if 2.435 <= answer1 <= 2.445:\n",
+        "if (2.435 <= answer1 <= 2.445):\n",
         "  print(f\"Your answer is: {answer1} km/s. That seems about right.\")\n",
         "  time.sleep(1)\n",
         "  print(\"You can read on Callisto here, if you'd like: https://science.nasa.gov/jupiter/jupiter-moons/callisto/\")\n",
