--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HiWEJR9CeE84r9puWyVT9hjb6WuazFcv",
-      "authorship_tag": "ABX9TyPfJOYUiPvEZAx0+ZRcqOhG",
+      "authorship_tag": "ABX9TyOKFzsGGfomp/mEhN2PV0gn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -399,89 +399,53 @@
         "# print()"
       ],
       "metadata": {
-        "id": "yxsYY9c1omJS",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a37da9fc-f6a3-40eb-fef6-3e9b4e6c5171"
+        "id": "yxsYY9c1omJS"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "30\n",
-            "31\n",
-            "32\n",
-            "33\n",
-            "34\n",
-            "35\n",
-            "36\n",
-            "37\n",
-            "38\n",
-            "39\n",
-            "40\n",
-            "41\n",
-            "42\n",
-            "43\n",
-            "44\n",
-            "45\n",
-            "46\n",
-            "47\n",
-            "48\n",
-            "49\n",
-            "50\n",
-            "51\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n",
-            "10\n",
-            "11\n",
-            "12\n",
-            "13\n",
-            "14\n",
-            "15\n",
-            "16\n",
-            "17\n"
-          ]
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(\"Any last words? Or Feedback? I'd appreciate it. :)\")\n",
-        "print(\"Or you can enter 'no' to skip past this.\")\n",
-        "# If no, pass\n",
-        "# Else convert to string and save to file with the info you screen shotted on phone\n",
+        "print(\"Any last words?\")\n",
         "\n",
-        "# and remember thatsallfolks1OR2(); choose which one with a random number generator and if statements!\n",
+        "'''\n",
+        "thatsallfolks1(.3)\n",
+        "or\n",
+        "thatsallfolks2(.2)\n",
         "\n",
-        "# upload to github and put proper links in CV"
+        "pick w/ a random number generator and if statements\n",
+        "'''"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 53
         },
         "id": "SLEY2Rq6PYCM",
-        "outputId": "8df4b353-a35b-43f6-b840-48ca75dc0f98"
+        "outputId": "054e9369-249f-44e7-9716-dad5a917051e"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Any last words? Or Feedback? I'd appreciate it. :)\n",
-            "Or you can enter 'no' to skip past this.\n"
+            "Any last words?\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nthatsallfolks1(.3)\\nor\\nthatsallfolks2(.2)\\n\\npick w/ a random number generator and if statements\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
         }
       ]
     }
