--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HiWEJR9CeE84r9puWyVT9hjb6WuazFcv",
-      "authorship_tag": "ABX9TyOKFzsGGfomp/mEhN2PV0gn",
+      "authorship_tag": "ABX9TyPY3Am4Po7GaDTT+S6fB4Ss",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "  >> to see what I could do.\n",
         "  >> to collect things that I like about space, prehistoric creatures, and,\n",
         "     most importantly, geese.\n",
-        "  >> for fun?\n",
+        "  >> for fun? (゜-゜)\n",
         "\n",
         "  Credits:\n",
         "  >> If you don't plan on being so daring, give credit to looney tunes or the\n",
