--- a/project1.ipynb
+++ b/project1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1HiWEJR9CeE84r9puWyVT9hjb6WuazFcv",
-      "authorship_tag": "ABX9TyMKRLRsG5MO266y6SOL9MMD",
+      "authorship_tag": "ABX9TyPTxsyKUoyj7cb6aC3ZVKuw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,7 +116,7 @@
         "time.sleep(2)\n",
         "\n",
         "print(\"These may help: \\n\" +\n",
-        "      \"- The gravitational constant is 6.6743 × 10e-11 in mks units \\n\" +\n",
+        "      \"- The gravitational constant is 6.6743 × 10e-11 in mks units. \\n\" +\n",
         "      \"- https://nssdc.gsfc.nasa.gov/planetary/factsheet/galileanfact_table.html \\n\")\n",
         "time.sleep(2)\n",
         "\n",
@@ -124,31 +124,35 @@
         "\n",
         "  # mass\n",
         "  print(\"What is Callisto's mass in kg? Enter a number, m, where mass = m × 10e21 kg.\")\n",
-        "  time.sleep(1)\n",
         "  callisto_mass_kg_coeff_str = input()\n",
+        "  time.sleep(1)\n",
         "  try:\n",
         "    callisto_mass_kg_coeff = float(callisto_mass_kg_coeff_str)\n",
         "  except ValueError:\n",
         "    print()\n",
         "    gottoosilly()\n",
+        "    print()\n",
         "    print(\"Invalid input. Please enter a number.\")\n",
         "    callisto_mass_kg_coeff_str = input()\n",
         "    callisto_mass_kg_coeff = float(callisto_mass_kg_coeff_str)\n",
+        "    time.sleep(1)\n",
         "  callisto_mass_kg = callisto_mass_kg_coeff * (10**21)\n",
-        "  time.sleep(1)\n",
         "  print()\n",
         "\n",
         "  # radius\n",
         "  print(\"What is Callisto's radius in kilometers?\")\n",
         "  callisto_radius_km_str = input()\n",
+        "  time.sleep(1)\n",
         "  try:\n",
         "    callisto_radius_km = float(callisto_radius_km_str)\n",
         "  except ValueError:\n",
         "    print()\n",
         "    gottoosilly()\n",
+        "    print()\n",
         "    print(\"Invalid input. Please enter a number.\")\n",
         "    callisto_radius_km_str = input()\n",
         "    callisto_radius_km = float(callisto_radius_km_str)\n",
+        "    time.sleep(1)\n",
         "  callisto_radius_m = callisto_radius_km * 1000\n",
         "  time.sleep(1)\n",
         "  print()\n",
@@ -161,52 +165,51 @@
         "  return v_esc_in_kmps\n",
         "\n",
         "answer1 = callisto_questions_and_calculations()\n",
+        "answer1 = round(answer1, 4)\n",
         "\n",
-        "if answer1 is not None: # Check if the function returned a valid answer\n",
-        "  answer1 = round(answer1, 4)\n",
+        "# if answer seems unreasonable\n",
+        "if (answer1 < 2.435) or (answer1 > 2.445):\n",
+        "  print(f\"Your answer is: {answer1} km/s. That doesn't seem right.\\n\" +\n",
+        "          \"Would you like to try again? Enter 'yes' or 'no'.\")\n",
+        "  determination1 = input()\n",
+        "  determination1 = str(determination1)\n",
+        "  time.sleep(1)\n",
+        "  print()\n",
         "\n",
-        "  if (answer1 < 2.435) or (answer1 > 2.445):\n",
-        "\n",
-        "    print(f\"Your answer is: {answer1} km/s. That doesn't seem right.\\n\" +\n",
-        "           \"Would you like to try again? Enter 'yes' or 'no'.\")\n",
+        "  while (determination1 != \"yes\" and determination1 != \"no\"):\n",
+        "    sillygoose()\n",
+        "    print()\n",
+        "    print(\"\\nWould you like to try again? Enter 'yes' or 'no'.\")\n",
         "    determination1 = input()\n",
         "    determination1 = str(determination1)\n",
         "    time.sleep(1)\n",
         "    print()\n",
         "\n",
-        "    while (determination1 != \"yes\" and determination1 != \"no\"):\n",
-        "      # %run ./pypics.ipynb # Commenting out as pypics.ipynb is not available\n",
-        "      # sillygoose() # Assuming sillygoose() is defined elsewhere\n",
-        "      print(\"\\nWould you like to try again? Enter 'yes' or 'no'.\")\n",
-        "      determination1 = input()\n",
-        "      determination1 = str(determination1)\n",
-        "      time.sleep(1)\n",
-        "      print()\n",
+        "  if determination1 == \"yes\":\n",
+        "    callisto_questions_and_calculations()\n",
         "\n",
-        "    if determination1 == \"yes\":\n",
-        "      callisto_questions_and_calculations()\n",
-        "\n",
-        "    elif determination1 == \"no\":\n",
-        "      print(\"Okay. \\n\")\n",
-        "      pass\n",
-        "\n",
-        "  if (2.435 <= answer1 <= 2.445):\n",
-        "    print(f\"Your answer is: {answer1} km/s. That seems about right.\")\n",
+        "  elif determination1 == \"no\":\n",
+        "    print(\"Okay.\")\n",
         "    time.sleep(1)\n",
-        "    print(\"You can read on Callisto here, if you'd like: https://science.nasa.gov/jupiter/jupiter-moons/callisto/\")\n",
-        "    time.sleep(1)\n",
+        "    pass\n",
+        "\n",
+        "# if answer seems reasonable\n",
+        "if (2.435 <= answer1 <= 2.445):\n",
+        "  print(f\"Your answer is: {answer1} km/s. That seems about right.\")\n",
+        "  time.sleep(1)\n",
+        "  print(\"You can read on Callisto here, if you'd like: https://science.nasa.gov/jupiter/jupiter-moons/callisto/\")\n",
+        "  time.sleep(1)\n",
         "\n",
         "end_things()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
         "id": "UlZMjvhHJHEr",
-        "outputId": "534aea69-ff22-4b75-a502-b558e3aec442"
+        "outputId": "a622ab85-8579-4676-c2e1-ff36e016c245"
       },
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,70 +270,19 @@
             "█████████████████████████████████████████████████████████████████████  ███████████████\n",
             "██████████████████████████████████████████████████████████████████████████████████████\n",
             "Invalid input. Please enter a number.\n",
-            "8\n",
-            "\n",
-            "What is Callisto's radius in kilometers?\n",
-            "km\n",
-            "\n",
-            "██████████████████████████████████████████████████████████████████████████████████████\n",
-            "██████████████████████████████████████████████████████████████████████████████████████\n",
-            "████                                                                     █████████████\n",
-            "████  ███████████  ████████████  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████  ████████████  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████  /      \\████  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████           \\██  ███████████  ████████████  ███████████  █████████████\n",
-            "████  █████████/             \\█  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████\\___  _---_      █  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████  █████|     █  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████  █████|     █  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████  █████|     █  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████  █████     |█  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████  █████     |█  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████  ████/     |█  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████  ███/      |█  ███████████  ████████████  ███████████  █████████████\n",
-            "████  ███████████  ███        \\  █/           \\███████████  ███████████  █████████████\n",
-            "████  ███████████  ██/                            \\███████  ███████████  █████████████\n",
-            "████  ███████████  █|                                \\████  █████████      ███████████\n",
-            "████  ███████████  █|                                  \\██  ████████  █  ██  █████████\n",
-            "████  ███████████  █|                                    \\  ████████  █        ███████\n",
-            "████  ███████████  ██\\                                         /█████     ██     █████\n",
-            "████  ███████████  ███\\                                       /███████     ███    ████\n",
-            "████  ███████████  ████\\                                    /██████████         ██████\n",
-            "████  ███████████  ████████\\                                ███████████      █████████\n",
-            "████  ███████████  ███████████\\                        /██  ███████████  █████████████\n",
-            "████  ███████████  ████████████  ██\\             /████████  ███████████  █████████████\n",
-            "████  ███████████  ████████████  ████|   |██  ████████████  ███████████  █████████████\n",
-            "████  ███████████  ████████████  ███/    |██  ████████████  ███████████  █████████████\n",
-            "████  ███████████  ███████████/  __________\\  ████████████  ███████████  █████████████\n",
-            "████  ███████████  ████████████  ███████████  ████████████  ███████████  █████████████\n",
-            "████                                                                     █████████████\n",
-            "██████████████████████████████████████████████████████████████████████████████████████\n",
-            "███████████████████  ████████  ████████████████████████████  █  █  ███████████████████\n",
-            "████     ██    ██      ████      ██    ███    ███████    █████  █  ███████████████████\n",
-            "███  ██  █  ██  ███  ████████  ███  ██  █  ██  █████   ████  █  █  █  ██  ████████████\n",
-            "████     █  ██  ███  ████████  ███  ██  █  ██  ████████   █  █  █  ██  █  ████████████\n",
-            "███████  ██    ████    ██████    ██    ███    ██████     ██  █  █  ████  █████████████\n",
-            "███     ██████████████████████████████████████████████████████████████  ██████████████\n",
-            "█████████████████████████████████████████████████████████████████████  ███████████████\n",
-            "██████████████████████████████████████████████████████████████████████████████████████\n",
-            "Invalid input. Please enter a number.\n",
             "9\n",
             "\n",
-            "Your answer is: 10.8927 km/s. That doesn't seem right.\n",
-            "Would you like to try again? Enter 'yes' or 'no'.\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "Interrupted by user",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-11-2752868392.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     62\u001b[0m     print(f\"Your answer is: {answer1} km/s. That doesn't seem right.\\n\" +\n\u001b[1;32m     63\u001b[0m            \"Would you like to try again? Enter 'yes' or 'no'.\")\n\u001b[0;32m---> 64\u001b[0;31m     \u001b[0mdetermination1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m     \u001b[0mdetermination1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdetermination1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1175\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1176\u001b[0m             )\n\u001b[0;32m-> 1177\u001b[0;31m         return self._input_request(\n\u001b[0m\u001b[1;32m   1178\u001b[0m             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1179\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"shell\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1217\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1218\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1219\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1220\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1221\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+            "What is Callisto's radius in kilometers?\n",
+            "9\n",
+            "\n",
+            "Your answer is: 11.5534 km/s. That doesn't seem right.\n",
+            "Would you like to try again? Enter 'yes' or 'no'.\n",
+            "no\n",
+            "\n",
+            "Okay. \n",
+            "\n",
+            "\n",
+            "...\n"
           ]
         }
       ]
